# gdx-teavm

./: .gitattributes  .gitignore  AGENTS.md  CHANGES  CHANGES.md  README.md  build.gradle  build.gradle.kts  dependencies.gradle  deploy.gradle  eclipse-formatter.xml  gradle.properties  local.properties  publish.gradle.kts  settings.gradle  settings.gradle.kts
.github/: FUNDING.yml
.github/scripts/: android-runtime-proof.sh  runtime-fps-summary.py
.github/workflows/: build_and_upload.yml  dispatch_build.yml  gradle.yml  pullrequest.yml  release.yml  runtime_examples.yml  snapshot.yml  tag.yml  workflow_dispatch_publish.yml
.run/: basic_build_teavm_glfw.run.xml  basic_build_teavm_psp.run.xml  basic_build_web.run.xml  basic_run_desktop.run.xml  basic_run_web.run.xml  core-config.run.xml  core-run-desktop.run.xml  core-run-teavm.run.xml  core_build_teavm.run.xml  core_build_teavm_glfw.run.xml  core_run_desktop.run.xml  core_run_web.run.xml  freetype_build_web.run.xml  freetype_run_desktop.run.xml  freetype_run_web.run.xml  gdx-tests-build.run.xml  gdx-tests-run-desktop.run.xml  gdx-tests-run-teavm.run.xml  gdx_teavm_clean.run.xml  gdx_tests_build_web.run.xml  gdx_tests_run_desktop.run.xml  gdx_tests_run_web.run.xml
backends/backend-android/: build.gradle.kts
backends/backend-android/src/main/resources/: CMakeLists.txt  android_jni.c  app_include.c
backends/backend-dragome/: .classpath  .project  build.gradle
backends/backend-dragome-old/: .classpath  .project
backends/backend-glfw/: build.gradle.kts
backends/backend-glfw/src/main/resources/: CMakeLists.txt  app_include.c  fiber.c  uchar.h
backends/backend-glfw/src/main/resources/external_cpp/glew-2.3.0/lib/Release/x64/: glew32s.lib  glew32s_md.lib
backends/backend-glfw/src/main/resources/external_cpp/glfw_stats/: gdx_teavm_matrix4.c  gdx_teavm_spritebatch.c  glfw_memory_stats.c
backends/backend-glfw/src/main/resources/org/teavm/backend/c/: date.c  time.c
backends/backend-glfw/src/main/resources/templates/glfw/: app_console.bat  app_debug.bat  app_debug.sh  app_release.bat
backends/backend-ios/: build.gradle.kts
backends/backend-ios/src/main/resources/: CMakeLists.txt  app_include.c  fiber.c  file.c  ios_bridge.c  ios_bridge.h  uchar.h
backends/backend-ios/src/main/resources/templates/ios/xcode/: README.md
backends/backend-ios/src/main/resources/templates/ios/xcode/GdxTeaVMIOSSpike.xcodeproj/: project.pbxproj
backends/backend-ios/src/main/resources/templates/ios/xcode/Sources/: GdxTeaVMIOSSpike-Bridging-Header.h  GdxTeaVMIOSSpikeApp.swift  IOSControllerBridge.swift  Info.plist  LaunchScreen.storyboard  TeaVMViewController.swift  TeaVMViewControllerANGLE.swift
backends/backend-psp/: build.gradle.kts
backends/backend-psp/src/main/resources/: CMakeLists.txt  app_include.c  build.bat  build.sh
backends/backend-psp/src/main/resources/external_cpp/gu2gl/: gu2gl.h
backends/backend-psp/src/main/resources/external_cpp/psp/: PSPCoreApi.h  PSPDebugApi.h  PSPGraphicsApi.h  PSPInclude.h  PSPInputApi.h  PSPLog.h  PSPMemory.h  PSPTextureApi.h  teavm_psp_file.c
backends/backend-shared/: build.gradle.kts
backends/backend-teavm/: .classpath  .project  build.gradle  build.gradle.kts
backends/backend-teavm-c/: build.gradle.kts
backends/backend-teavm-glfw/: build.gradle.kts
backends/backend-teavm/jni/: CMakeLists.txt  custom_glue.cpp  gdx.idl  post.js
backends/backend-teavm/jni/gdx/: CMakeLists.txt
backends/backend-teavm/jni/gdx/src/: GDX.h
backends/backend-teavm/jni/gdx/src/GDX/gdx2d/: CMakeLists.txt  gdx2d.c
backends/backend-web/: .classpath  .project  build.gradle  build.gradle.kts
backends/backend-web/backend-web/: build.gradle
backends/dragome-backend/: .classpath  .project  build.gradle
backends/gdx-backend-dragome/: .classpath  .project  build.gradle  pom.xml
backends/web-backend/: .classpath  .project  build.gradle
benchmark/: README.md  build.gradle.kts
benchmark/core/: build.gradle.kts
benchmark/glfw/: build.gradle.kts
benchmark/graalvm/: build.gradle.kts
benchmark/lwjgl3/: build.gradle.kts
benchmark/plugin/: build.gradle.kts
docs/: backend-architecture.md  plugin-properties.md  usage.md
examples/: README.md
examples/basic/: README.md
examples/controllers/: README.md
examples/freetype/: README.md
examples/gdx-tests/: README.md
examples/shared/: build.gradle.kts
extensions/asset-loader/: build.gradle.kts
extensions/gdx-box2d/gdx-box2d-build/jni/: CMakeLists.txt  basebox2D.h  box2D.idl  build.bat  custom_glue.cpp  post.js
extensions/gdx-box2d/gdx-box2d-build/jni/box2d/: CMakeLists.txt
extensions/gdx-box2d/gdx-box2d-build/jni/box2d/src/: CMakeLists.txt
extensions/gdx-box2d/gdx-box2d-build/jni/box2d/src/Box2D/Collision/: CMakeLists.txt
extensions/gdx-box2d/gdx-box2d-build/jni/box2d/src/Box2D/Common/: CMakeLists.txt
extensions/gdx-box2d/gdx-box2d-build/jni/box2d/src/Box2D/Dynamics/: CMakeLists.txt
extensions/gdx-box2d/gdx-box2d-build/jni/box2d/src/Box2D/Rope/: CMakeLists.txt
extensions/gdx-bullet/gdx-bullet-build/jni/bullet/src/BulletSoftBody/: CMakeLists.txt
extensions/gdx-bullet/gdx-bullet-build/jni/bullet/src/LinearMath/: CMakeLists.txt
extensions/gdx-bullet/gdx-bullet-generator/src/main/cpp/: CMakeLists.txt  build.bat  post.js
extensions/gdx-bullet/gdx-bullet-generator/src/main/cpp/bullet/src/BulletCollision/Gimpact/: btGImpactShape.h
extensions/gdx-controllers-teavm/: ReadMe.md  build.gradle.kts
extensions/gdx-freetype-dragome/: .classpath  .project
extensions/gdx-freetype-teavm/: build.gradle  build.gradle.kts
gdx/gdx-base/: build.gradle
gdx/gdx-build/: build.gradle
gdx/gdx-teavm/: build.gradle
generator/: build.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tests/gdx-tests-dragome/: .classpath  .project  build.gradle  pom.xml
tests/gdx-tests-dragome-desktop/: .classpath  .project
tests/gdx-tests-dragome-html/: .classpath  .project  build.gradle
tools/JParser/: build.gradle
tools/TeaVMJParser/: build.gradle
tools/gdx-teavm-plugin/: build.gradle.kts  settings.gradle.kts
(+3261 files in other folders)
